# memoatlas

./: .env.example  .gitignore  .wakatime-project  LICENSE  README.md  config.py  license  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/forms/: __init__.py  login_form.py  note_form.py  register_form.py
app/models/: __init__.py  connection.py  note.py  progress.py  user.py
app/routes/: __init__.py  api.py  auth.py  config.py  dashboard.py  graph.py  notes.py  search.py
app/services/: __init__.py  analytics_service.py  graph_service.py  search_service.py
app/static/css/: dashboard.css  graph.css  main.css  style.css
app/static/js/: dashboard.js  graph.js  search.js
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: dashboard.html
app/templates/graph/: graph.html  index.html
app/templates/notes/: create.html  create_note.html  detail.html  edit.html  list.html  list_notes.html
app/templates/profile/: profile.html
app/templates/search/: results.html
memoAtlas/: config.py
memoAtlas/app/: __init__.py
memoAtlas/app/forms/: __init__.py  note_form.py  register_form.py
memoAtlas/app/models/: __init__.py  connection.py  note.py  progress.py  user.py
memoAtlas/app/routes/: api.py  auth.py  dashboard.py  game.py  graph.py  notes.py  search.py  user.py
memoAtlas/app/services/: graph_service.py  search_service.py
memoAtlas/app/templates/: base.html  (+1 more)
memoAtlas/tests/: test_auth.py  test_graph.py  test_notes.py
tests/: test_auth.py  test_graph.py  test_notes.py
(+26 files in other folders)
