[project]
name = "memoatlas"
version = "0.1.0"
description = "Visual knowledge mapping platform for students"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.0",
    "wtforms>=3.1.0",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.0",
    "bleach>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
